--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title style="font-family:open sans;">Projects</title>
+    <title style="font-family:open sans;">Contact</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -55,7 +55,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!--<a class="navbar-brand" href="#">VR Club @ UCSD</a>-->
-                <a href="#" class="pull-left"><img src="img/VR_ClubLogo.png" height = "50" width = "75"></a>
+                <a href="index.html" class="pull-left"><img src="img/VR_ClubLogo.png" height = "50" width = "75"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
 
@@ -77,21 +77,27 @@
     <nav class="secondnavbar flex ">
         <div class="flex-row ">
             <span class="flex-item ">
-                <a class="page-scroll" href="#location" style="color:#d3d3d3;font-family:open sans;">
-									Location
-								</a>
+
+ <i class="fa fa-map-o fa-2x" style="vertical-align: middle;">
+               <a class="page-scroll" href="#location" style="color:#d3d3d3;font-family:open sans;">Location</a>
+                </i>
+
             </span>
 
             <span class="flex-item">
-                <a class="page-scroll" href="#getInvolved" style="color:#d3d3d3;font-family:open sans;">
-									Get Involved
-								</a>
+
+
+            <i class="fa fa-user-plus fa-2x" style="vertical-align: middle;">
+            <a class="page-scroll" href="#getInvolved" style="color:#d3d3d3;font-family:open sans;">Get Involved </a>
+            </i>
             </span>
 
             <span class="flex-item">
-                <a class="page-scroll" href="#contact" style="color:#d3d3d3;font-family:open sans;">
-									Contact Us
-								</a>
+
+                <i class="fa fa-envelope-o fa-2x" style="vertical-align: middle;">
+           <a class="page-scroll" href="#contact" style="color:#d3d3d3;font-family:open sans;">Contact Us </a>
+            </i>
+
             </span>
         </div>
 
