--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!--<a class="navbar-brand" href="#">VR Club @ UCSD</a>-->
-                <a href="#" class="pull-left"><img src="img/VR_ClubLogo.png" height = "50" width = "75"></a>
+                <a href="index.html" class="pull-left"><img src="img/VR_ClubLogo.png" height = "50" width = "75"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
 
@@ -84,7 +84,7 @@
                 <ul class="nav navbar-nav">
                     <li class = "active" ><a href = "home.html">Home</a><li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="project.html">Projects</a></li>
+                  <!--  <li><a href="project.html">Projects</a></li>-->
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="media.html">Media</a></li>
                     <li><a href="opportunities.html">Opportunities</a></li>
@@ -163,15 +163,23 @@
     <div class="section" id = "section1">
 
         <div class="slide" id="slide1">
-            <center style="background-color:gray;opacity:0.88;filter: alpha(opacity=86);">
-							<h1 style="color:black; font-size:200%;">ARt Gallery (Vuforia)</h1>
+            <center style="background-color:#d1d1e0;opacity:0.88;filter: alpha(opacity=86);">
+							<h1 style="color:black; font-size:150%;">ARt Gallery (Vuforia)</h1>
             	<h3 style="color:black; font-size:150%;"> Interested in the process of AR app dev for mobile? Interested in helping design, propose and implement an experimental art gallery on campus? Interested in how cyborgs interpret/interact with art?</h3> </center>
+            <center> <div class="alert alert-info" role="alert">
+  If you would like more information about this project email <strong> Cliff at cpottber@ucsd.edu </strong>!
+</div> </center>
+
+
             </div>
         <div class="slide" id="slide2">
-            <center style="background-color:gray;opacity:0.88;filter: alpha(opacity=86);">
+            <center style="background-color:#d1d1e0;opacity:0.88;filter: alpha(opacity=86);">
             	<h1 style="color:black; font-size:200%;">VR Video 360</h1>
             	<h3 style="color:black; font-size:150%;">VR Club is currently in collaboration with the Communication and Theater departments to create a full film for Virtual Reality. </h3>
             </center>
+            <center> <div class="alert alert-warning" role="alert">
+  This project is currently <strong> on hold </strong>right now, please be patient with us!
+</div> </center>
             </div>
     </div>
 
