--- a/media.html
+++ b/media.html
@@ -37,6 +37,9 @@
 
     <script type="text/javascript" src="js/jquery.fullPage.js"></script>
 
+        <script src="js/bootstrap.min.js"></script>
+
+
 
     <!--<script type="text/javascript">
 
@@ -80,7 +83,7 @@
 	                    <span class="icon-bar"></span>
 	                </button>
 	                <!--<a class="navbar-brand" href="#">VR Club @ UCSD</a>-->
-	                <a href="#" class="pull-left"><img src="img/VR_ClubLogo.png" height = "50" width = "75"></a>
+	                <a href="index.html" class="pull-left"><img src="img/VR_ClubLogo.png" height = "50" width = "75"></a>
 	            </div>
 	            <!-- Collect the nav links, forms, and other content for toggling -->
 
