--- a/opportunities.html
+++ b/opportunities.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
 
@@ -16,6 +16,9 @@
 
     <!-- Custom CSS -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 
 
 
@@ -45,7 +48,7 @@
                       <span class="icon-bar"></span>
                   </button>
                   <!--<a class="navbar-brand" href="#">VR Club @ UCSD</a>-->
-                  <a href="#" class="pull-left"><img src="img/VR_ClubLogo.png" height = "50" width = "75"></a>
+                  <a href="index.html" class="pull-left"><img src="img/VR_ClubLogo.png" height = "50" width = "75"></a>
               </div>
               <!-- Collect the nav links, forms, and other content for toggling -->
 
@@ -99,24 +102,26 @@
     <nav class="secondnavbar flex ">
         <div class="flex-row ">
             <span class="flex-item ">
-                <a class="page-scroll" href="#jobs">Current</a>
+                <i class="fa fa-money fa-2x" style="vertical-align: middle;">
+               <a class="page-scroll" href="#internships" style="color:#d3d3d3;font-family:open sans;">Featured</a>
+                </i>
             </span>
 
             <span class="flex-item">
-                <a class="page-scroll" href="#jobs">Jobs</a>
+
+                <i class="fa fa-suitcase fa-2x" style="vertical-align: middle;">
+               <a class="page-scroll" href="#jobs" style="color:#d3d3d3;font-family:open sans;">Current</a>
+                </i>
 
             </span>
 
-            <span class="flex-item">
-                <a class="page-scroll" href="#jobs">Plan</a>
-            </span>
-        </div>
+                   </div>
 
     </nav>
 
     <div class="banner">
         <div class="banner-box">
-            <center><h1>OPPORTUNITIES</h1></center>
+            <center><h1 style = "color:white;">Opportunities</h1></center>
         </div>
     </div>
 
