--- a/projects.html
+++ b/projects.html
@@ -73,7 +73,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!--<a class="navbar-brand" href="#">VR Club @ UCSD</a>-->
-                <a href="#" class="pull-left"><img src="img/VR_ClubLogo.png" height = "50" width = "75"></a>
+                <a href="index.html" class="pull-left"><img src="img/VR_ClubLogo.png" height = "50" width = "75"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
