Fixed Primary Nav bar and Home page

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+1<!DOCTYPE html>
 <html>
 
 <head>
@@ -121,7 +121,7 @@
 
             <span class="flex-item">
                 <i class="fa fa-users fa-2x">
-                <a class="page-scroll" href="#honeycombs"style = "font-size: 90%;color:white;"> Meet the Team
+                <a class="page-scroll" href="#honeycombs"style = "font-size: 90%;color:white; "> Meet the Team
                     </i>
 
                 </a>
@@ -305,6 +305,15 @@
         *{
             font-family: 'Open Sans', sans-serif;
         }
+
+         .navbar .navbar-nav {
+                display: inline-block;
+                float: none;
+                vertical-align: top;
+            }
+            .navbar .navbar-collapse{
+                text-align: center;
+            }
 
         .mission-div{
             background-color: #ffffff;
