--- a/contact.html
+++ b/contact.html
@@ -275,6 +275,16 @@
 	</div>
 
 	 <style type="text/css">
+
+         .navbar .navbar-nav {
+                display: inline-block;
+                float: none;
+                vertical-align: top;
+            }
+            .navbar .navbar-collapse{
+                text-align: center;
+            }
+
         .flex-row{
             width: 100%;
             display: -webkit-box !important;
