--- a/opportunities.html
+++ b/opportunities.html
@@ -314,6 +314,16 @@ Engineers for Exploration also has a 10-week summer paid internship available wh
     </script>
 
     <style type="text/css">
+    
+       .navbar .navbar-nav {
+                display: inline-block;
+                float: none;
+                vertical-align: top;
+            }
+            .navbar .navbar-collapse{
+                text-align: center;
+            }
+
         .flex-row{
             width: 100%;
             display: -webkit-box !important;
@@ -440,6 +450,7 @@ Engineers for Exploration also has a 10-week summer paid internship available wh
             color: white;
 
         }
+
 
         *{
             font-family:Roboto Slab !important;
